# snippets

./: .gitignore  README.md  ckfinder_keygen.php  ndame.cpp  ndame.h  wake_on_lan.php
bash/: backup-btrfs.sh  backup-mysql  backup-mysql.sh  backup-remote-restic.sh  backup-remote.sh  backup-script.sh  backupscript  backupscript.sh  boot  changestation.sh  crop.sh  deviant-bg.sh  deviantbg  deviantbg.sh  dhclient-exit-hook-nsupdate.sh  dump.sh  dyndns-update.sh  eagle.sh  fan-ctl.sh  fritzbox  fritzbox.sh  get-panoramas.sh  getpanoramas.sh  git-svn-relocate.sh  git-svn-relocate2.sh  hetzer-sb-notify.sh  hetzer_sb_notify.sh  ip-rule-restore.sh  luks-open.sh  m4a2mp3.sh  mount.l2p.sh  mount.luks.sh  mountcrypt.sh  mountl2p.sh  netdev.sh  nsupdate-dhclient-exit-hook.sh  nsupdate.sh  presentation.sh  recursive-axfr.sh  restic-btrfs-snapshots.sh  (+13 more)
bash_scripts/: changestation  flv2mp4  geo2gps  getpanoramas  gps2gpx  gps2pc  ipodvideo  mountcrypt  mountl2p  mousewheel  netdev  panel  pc2gps  router  zyxel
c/: color.h  logger.c  logger.h  logger_test.c
campus/: calendar.php  campus.db
cartodb/: import_tcx.sh  tcx2gpx.sh
gc.com_spider/: cookie.txt  gc.kml
gc_spider/: json_response  kml.php
hemblem/: script.js
interactive_php/: index.html
josephus/: josephus.cpp  josephus.h
link_preview/: link-preview.php  linkinfo.php  test.php
ndame/: Makefile  schach.js
osm_changeset_rss/: osm_changeset_rss.php
php/: b64img.php  base64.js  (+7 more)
python/push-status/: README.md  flake.nix  pyproject.toml
python/push-status/push_status/: monitors.py  push_status.py  systemd.py
(+84 files in other folders)
